# rumi

./: .dir-locals.el  .gitignore  BlockContext.cpp  BlockContext.h  CMakeLists.txt  Context.cpp  Context.h  LICENSE  Makefile  Readme.md  ast.rum  cli.h  codegen.cpp  codegen.h  compile.sh  compiler.cpp  compiler.h  compiler.rum  helper.cpp  install.sh  lex.l  node.h  nodes.h  parse.y  parser.rum  rum.cpp  rumi.cpp  self_compile.sh  test.c  test.rum  test2.rum  test3.rum  test4.rum  test5.rum  test6.rum  test7.rum  test8.rum  test_import.rum  type.cpp  type.h
doc/: intro.md
editors/vim/: README.md
examples/: fizzbuzz.rum
examples/curl/: compiletime.rum  curl.rum  hello.rum
examples/gtk/: bridge.c  gtk.rum  hello.rum
examples/sdl/: hello.rum  sdl.rum  sdlbridge.c
examples/using-c/: Makefile  bridge.c  main.rum
lib/: ast.rum  base.rum  compiler.rum  parser.rum  sstream.rum
nodes/: Expression.h  Node.h  Statement.h  Type.cpp  Type.h  nodes.h
nodes/expressions/: ArrayExpr.cpp  ArrayExpr.h  BinaryOperation.cpp  BinaryOperation.h  CastExpr.cpp  CastExpr.h  FunctionCallExpr.cpp  FunctionCallExpr.h  IntValue.cpp  IntValue.h  MemberExpr.cpp  MemberExpr.h  MethodCall.cpp  MethodCall.h  PointerAccessExpr.cpp  PointerAccessExpr.h  PointerExpr.cpp  PointerExpr.h  SizeofExpr.cpp  SizeofExpr.h  StringValue.cpp  StringValue.h  TypeNode.h  VariableExpr.cpp  VariableExpr.h
nodes/statements/: ArgDecl.h  CodeBlock.cpp  CodeBlock.h  CompileDirective.cpp  CompileDirective.h  CompileStatement.cpp  CompileStatement.h  DeferStatement.h  (+23 more)
rumlib/: base.rum  compiler.rum
src/: CC.cpp  CC.h  CMakeLists.txt  DebugInfo.h  LLContext.cpp  LLContext.h  RumiConfig.h.in  Source.cpp  Source.h  TypeEnum.h  base.cpp  base.h  c2rumi.cpp  compiler.rum  rum.cpp  rum.rum  rumi.cpp
src/ast/: Address.cpp  Address.h  Arg.cpp  Arg.h  Assign.cpp  Assign.h  BinOp.cpp  BinOp.h  BinOpDef.cpp  BinOpDef.h  CMakeLists.txt  Cast.cpp  Cast.h  CodeBlock.cpp  CodeBlock.h  ConstBool.cpp  ConstBool.h  ConstFloat.cpp  ConstFloat.h  ConstInt.cpp  ConstInt.h  Define.cpp  Define.h  Directive.cpp  Directive.h  Enum.cpp  Enum.h  Expression.h  FCall.cpp  FCall.h  Function.cpp  Function.h  FunctionSig.cpp  FunctionSig.h  FunctionType.cpp  FunctionType.h  If.cpp  If.h  Import.cpp  Import.h  (+46 more)
src/parser/: AddressParser.cpp  AddressParser.h  AssignParser.cpp  AssignParser.h  BinOpDefParser.cpp  BinOpDefParser.h  BinOpParser.cpp  BinOpParser.h  BoolValueParser.cpp  BoolValueParser.h  CMakeLists.txt  CastExpr.cpp  CastExpr.h  CastExprParser.cpp  CastExprParser.h  DebugInfo.cpp  DefineParser.cpp  DefineParser.h  DirectiveParser.cpp  DirectiveParser.h  DynamicParseRule.cpp  DynamicParseRule.h  EnumParser.cpp  EnumParser.h  ExpressionParser.cpp  ExpressionParser.h  FCallParser.cpp  FCallParser.h  FCallStmtParser.cpp  FCallStmtParser.h  FunctionParser.cpp  FunctionParser.h  FunctionSigParser.cpp  FunctionSigParser.h  FunctionTypeParser.cpp  FunctionTypeParser.h  IdParser.cpp  IdParser.h  IfParser.cpp  IfParser.h  (+73 more)
tests/: 1.rum  10.rum  11.rum  12.rum  2.rum  3.rum  4.rum  5.rum  6.rum  7.rum  8.rum  9.rum  argparser.rum  ast.rum  base.rum  compiler.rum  output.txt  parser.rum  sstream.rum  test.rum  test10.rum  test11.rum  test12.rum  test13.rum  test14.rum  test15.rum  test16.rum  test17.rum  test18.rum  test2.rum  test5.rum  test7.rum  test8.rum  test9.rum  test_import.rum
(+22 files in other folders)
